--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,7 +1,260 @@
-h1 {
-  @extend %h1;
+.menu {
+  &__list {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 20px;
+    text-align: center;
+
+    @include onDesktop {
+      font-size: 20px;
+    }
+  }
+
+  &__link {
+    color: $c-primary-dark;
+
+    @include onDesktop {
+      color: $c-primary-lightest;
+    }
+
+    &--scroll {
+      @include onDesktop {
+        color: $c-primary-dark;
+      }
+    }
+
+    &:hover {
+      color: $secondary-light;
+    }
+  }
 }
 
-p {
-  font-size: 1.6rem;
+.section {
+  &__separator {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 10px;
+    letter-spacing: 0.4em;
+    text-transform: uppercase;
+    color: $secondary-light;
+
+    @include onDesktop {
+      font-size: 20px;
+      line-height: 130%;
+    }
+  }
+
+  &__title {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 130%;
+    color: $c-primary-dark;
+
+    @include onDesktop {
+      font-size: 50px;
+      line-height: 130%;
+    }
+  }
+
+  &__text {
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    color: $c-primary-middle;
+  }
+
+  &__more {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 120%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: $c-primary-dark;
+
+    &:hover {
+      color: $secondary-light;
+    }
+
+    @include onDesktop {
+      font-size: 14px;
+      text-align: right;
+    }
+
+    &--aboutus {
+      @include onDesktop {
+        text-align: left;
+      }
+    }
+  }
+}
+
+.title {
+  &__text {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 120%;
+    color: $c-primary-dark;
+
+    @include onDesktop {
+      font-size: 90px;
+      line-height: 98px;
+      letter-spacing: -0.01em;
+    }
+  }
+
+  &__more {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: $c-primary-lightest;
+
+    @include onDesktop {
+      font-size: 14px;
+      line-height: 47px;
+    }
+  }
+}
+
+.slider {
+  &__arrows {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 50px;
+    text-align: center;
+    color: $c-primary-dark;
+
+    @include onDesktop {
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 50px;
+    }
+  }
+
+  &__arrow:hover {
+    color: $secondary-light;
+  }
+}
+
+.service {
+  &__name {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 130%;
+    letter-spacing: 0.4em;
+    text-transform: uppercase;
+    color: $c-primary-light;
+  }
+
+  &__title {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 130%;
+    color: $c-primary-dark;
+
+    @include onDesktop {
+      font-size: 24px;
+    }
+  }
+
+  &__text {
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    color: $c-primary-middle;
+  }
+
+  &__more {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 49px;
+    line-height: 57px;
+    text-align: center;
+    color: $c-primary-darkest;
+  }
+}
+
+.footer {
+  &__title {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 130%;
+    color: $c-primary-lightest;
+
+    @include onDesktop {
+      font-size: 36px;
+    }
+  }
+
+  &__text {
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    color: $c-primary-lighter;
+  }
+}
+
+.feedback {
+  &__label {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 160%;
+    color: $c-primary-lightest;
+  }
+
+  &__input {
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 150%;
+    color: $c-primary-lighter;
+  }
+
+  &__submit {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 120%;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: $c-primary-lightest;
+
+    @include onDesktop {
+      font-size: 14px;
+    }
+  }
 }
