--- a/src/scss/utils/_extends.scss
+++ b/src/scss/utils/_extends.scss
@@ -1,4 +1,8 @@
 %h1 {
-  font-size: 3.2rem;
-  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+}
+
+%transition {
+  transition: all 0.3s linear;
 }
