--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -13,6 +13,7 @@
 
   &--scroll {
     background-color: $c-primary-lightest;
+    box-shadow: 2px 0px 3px rgba(0, 0, 0, 0.2);
   }
 
   &__content {
