--- a/src/scss/blocks/service.scss
+++ b/src/scss/blocks/service.scss
@@ -37,14 +37,14 @@
     bottom: 0;
     width: 57px;
     height: 57px;
-    background-image: url(/img/plus.svg);
+    background-image: url(../img/plus.svg);
     background-repeat: no-repeat;
     background-position: center;
     @extend %transition;
 
     &:hover {
       background-color: $secondary-light;
-      background-image: url(/img/plus-white.svg);
+      background-image: url(../img/plus-white.svg);
     }
   }
 }
